Bitbucket Dark - Fix white background behind heading buttons
Side-by-side diff, View file, Comment and Edit buttons

--- a/Bitbucket/bitbucket_dark.css
+++ b/Bitbucket/bitbucket_dark.css
@@ -127,6 +127,7 @@
 .diff-container .refract-container,
 section h1 {
 	border-color: #444 !important;
+	background-color: #222 !important;
 }
 
 /* Main page area */
